[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
itertools = "0.10.5"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.5.0"

[lib]
proc_macro = true